Revision history for Red

{{$NEXT}}
    - Separate the Model generation for changing attributes
    - Make join on update use subselect
    - Teaching AST new dance moves (.replace)

0.1.52  2021-10-22T21:33:53+01:00
    - Fix usage of parameterized roles

0.1.51  2021-10-14T21:11:05+01:00
    - Fix red-do on SQLite

0.1.49  2021-10-06T18:16:00Z
    - Error on new with wrong type parameter
    - Create on transaction

0.1.49  2021-10-06T18:16:00Z
    - Send to cpan... (error on release)

0.1.48  2021-10-06T17:47:32Z
    - Throws error when setting a column attribute to a wrong type value

0.1.47  2021-09-13T22:55:22+01:00
    - Create Red.ping
    - Create Red::Driver.ping
    - small fix to introductory README example #502 (thanks @dwarring)
    - Really create a new connection for transaction in Pg #504 (thanks @jonathanstowe)
    - Fix sporadic warnings #509 (thanks @jonathanstowe)
    - Ensure use attr name not column name in new-from-data #511 (thanks @jonathanstowe)

0.1.46  2021-07-21T20:01:44+01:00
    - Accept aliases on schema

0.1.45  2021-07-18T22:30:28+01:00
    - Add documentation for `is column`
    - Forbid running .^create on defined model
    - Accept enums
    - Add optimization for X && (Y && !X) => False

0.1.44  2021-05-30T20:20:04+01:00
    - Add should-drop-cascade to decide if it should use cascade to drop table

0.1.43  2021-05-02T17:39:54+01:00
    - Retrying to release

0.1.42  2021-05-02T17:05:09+01:00
    - Accept models (on referencing and on relationship) as object type
    - Regenerate docs

0.1.41  2021-04-27T00:39:46+01:00
    - Fix dynamicaly `does` and `^mixin` on models (thanks Jonathan Stowe)

0.1.40  2021-03-28T22:23:09+01:00
    - Map new UNIQUE SQLite error

0.1.39  2021-03-28T21:28:42+01:00
    - Add table-name-wrapper
    - Fix has-one create

0.1.38  2021-02-22T19:41:38Z
    - Fix multi comparators conflict

0.1.37  2021-02-22T19:08:09Z
    - Add comparison to DateTime

0.1.36  2021-02-20T23:44:52Z